// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser 01.frog 1`] = `
Object {
  "body": Array [
    Object {
      "condition": "isGoalUp",
      "elseBody": Array [],
      "ifBody": Array [
        Object {
          "name": "moveUp",
          "type": "command",
        },
      ],
      "type": "IfStatement",
    },
    Object {
      "condition": "!isCarUp",
      "elseBody": Array [
        Object {
          "condition": "isCarLeft",
          "elseBody": Array [],
          "ifBody": Array [
            Object {
              "name": "moveRight",
              "type": "command",
            },
          ],
          "type": "IfStatement",
        },
        Object {
          "condition": "isCarRight",
          "elseBody": Array [],
          "ifBody": Array [
            Object {
              "name": "moveLeft",
              "type": "command",
            },
            Object {
              "name": "moveRight",
              "type": "command",
            },
          ],
          "type": "IfStatement",
        },
      ],
      "ifBody": Array [
        Object {
          "name": "moveUp",
          "type": "command",
        },
      ],
      "type": "IfStatement",
    },
  ],
  "type": "frogram",
}
`;

exports[`parser 02.frog 1`] = `
Object {
  "body": Array [
    Object {
      "condition": "(isLogUp&&isWallRight)||isCarUp",
      "elseBody": Array [],
      "ifBody": Array [
        Object {
          "name": "moveRight",
          "type": "command",
        },
      ],
      "type": "IfStatement",
    },
  ],
  "type": "frogram",
}
`;
